--- a/.github/workflows/gitactions.yml
+++ b/.github/workflows/gitactions.yml
@@ -2,8 +2,9 @@ name: learn-github-actions
 on: [push]
 jobs:
   check-bats-version:
-    runs-on: ubuntu-latest
+    runs-on: macos-10.13
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
+      - run: npm install
       - run: make lint
