--- a/.github/workflows/gitactions.yml
+++ b/.github/workflows/gitactions.yml
@@ -2,9 +2,9 @@ name: learn-github-actions
 on: [push]
 jobs:
   check-bats-version:
-    runs-on: macos-10.13
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-      - run: npm install
+      - run: npm install eslint-config-airbnb-base
       - run: make lint
