--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "brain-progression": "bin/brain-progression.js",
     "brain-prime": "bin/brain-prime.js"
   },
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,5 +30,6 @@
     "eslint-plugin-import": "^2.22.1",
     "readline-sync": "^1.4.10"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "main": "no"
 }
